Fixed spacing on about header

--- a/public/a/c/_header.scss
+++ b/public/a/c/_header.scss
@@ -63,7 +63,7 @@ header {
 	.search-wrap{margin-top:0px;}
 	.search-wrap.case-studies{margin-top: 20px;}
 	.search-wrap.blog{margin-top: 20px;}
-	.search-wrap.about{margin-top: 20px;}
+	.search-wrap.about{margin-top: 75px;}
 }
 
 @media (min-width: 768px) and (max-width: 979px) {  
