--- a/public/a/c/screen.css
+++ b/public/a/c/screen.css
@@ -1158,7 +1158,7 @@ header {
     margin-top: 20px; }
 
   .search-wrap.about {
-    margin-top: 20px; } }
+    margin-top: 75px; } }
 @media (min-width: 768px) and (max-width: 979px) {
   .search-wrap {
     margin-top: 155px; } }
